# gamify-rust

./: .gitignore  Cargo.toml  README.md  cli.yaml  config.example.yaml
.cargo/: config.toml
.github/workflows/: build.yml  deploy.yml
resources/: isometric3.flf
src/: main.rs
