[package]
name = "gamify-rust"
version = "0.1.1"
authors = ["darklamp <alessandro17.villa@mail.polimi.it>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = { version = "0.10.32", features = ["vendored"] }
rustyline = "7.1.0"
colored = "2.0.0"
clap = { version = "3.0.0-beta.2", features = ["yaml"] }
reqwest = { version = "0.10.10", features = ["blocking", "cookies", "json"] }
lazy_static = "1.4.0"
serde = { version = "1.0.117", features = ["derive"] }
serde_yaml = "0.8.14"
dialoguer = "0.7.1"
native-dialog = "0.5.2"
tokio = {version = "1.0.1", features = ["full"]}
#opener = "0.4.1"
figlet-rs = "0.1.3"
term_size = "1.0.0-beta.2"
